# mih_f7x_adatbazisprojekt

cosinus_signal_package/: CMakeLists.txt  package.xml
cosinus_signal_package/include/cosinus_signal_package/: cosinus_signal_node.hpp
cosinus_signal_package/launch/: cosinus_signal_launch.py
cosinus_signal_package/msg/: Signal.msg
cosinus_signal_package/src/: cosinus_signal_node.cpp
cosinus_signal_package/test/: test_cosinus_signal.cpp
