<package format="2">
  <name>cosinus_signal_package</name>
  <version>0.1.0</version>
  <description>Package that generates a cosine signal and publishes it.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>